--- a/IntroductionToPython/00-Preliminaries.ipynb
+++ b/IntroductionToPython/00-Preliminaries.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "451c809e",
+   "id": "c8f5e05a-c8c4-4d1e-986b-66f5ac12caad",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "<div class=\"pagebreak\"></div>\n",
     "\n",
-    "Congratulations on making it to this point where you can now view, edit and run [Jupyter Notebooks](https://jupyter.org/).\n",
+    "# Preliminaries\n",
     "\n",
-    "We'll use Jupyter Notebooks for lectures, code demonstrations, and exercises.  You should run these notebooks yourself. Don't be afraid to make changes, try different code snippets than what's provided, and experiment.\n",
+    "Congratulations on making it to this point where you can now view, edit and run [Jupyter Notebooks](https://jupyter.org/) within Jupyter Lab.\n",
     "\n",
-    "The Jupyter environment follows a very familiar [user interface](https://en.wikipedia.org/wiki/WIMP_(computing)) pattern - the main difference is the ability to execute code within the different cells.  As you scroll through this notebook, you'll see that is composed of a particular sequence of cells.  Each of those cells, can either be code or [markdown](https://en.wikipedia.org/wiki/Markdown).  You will need to execute all of the code cells - primarily in order, but you can modify and repeat running cells.  With the markdown cells, we will provide content (e.g., this cell) or provide instructions or exercises to perform. \n",
+    "We'll use Jupyter notebooks for lectures, code demonstrations, and exercises.  You should run these notebooks yourself. Don't be afraid to make changes, try different code snippets than what's provided, and experiment.\n",
+    "\n",
+    "The Jupyter environment follows a very familiar [user interface](https://en.wikipedia.org/wiki/WIMP_(computing)) pattern - the main difference is the ability to execute code within the different cells.  As you scroll through this notebook, you'll see that is composed of a sequence of cells.  Each of those cells, can either be code or [markdown](https://en.wikipedia.org/wiki/Markdown).  You will need to execute all of the code cells - primarily in order, but you can modify and repeat running cells.  With the markdown cells, we will provide content (e.g., this cell), instructions or exercises to perform. \n",
     "\n",
     "A particular cell can be in one of two modes:\n",
-    "1. Command - will have a blue border around the active/current cell.\n",
-    "2. Edit - in this mode, you can change the content of the cells.  A green border is present.\n",
+    "1. Command\n",
+    "2. Edit\n",
     "\n",
     "In either of these modes:\n",
     " * <span class=\"keys\"><kbd class=\"key-shift\">Shift</kbd><span>+</span><kbd class=\"key-enter\">Enter</kbd></span>  Run the current cell, and select the cell below \n",
@@ -33,7 +35,24 @@
     "\n",
     "In the edit mode:\n",
     "* Press <kbd class=\"key-esc\">Esc</kbd> to go into the command mode\n",
-    "* Press <kbd class=\"key-tab\">Tab</kbd> for code completion or indent\n"
+    "* Press <kbd class=\"key-tab\">Tab</kbd> for code completion or indent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41ca9643-f1a3-42d9-ad8e-b1e83b80da38",
+   "metadata": {},
+   "source": [
+    "Displaying Line Numbers:<br>\n",
+    "You may want to turn on line numbers by default.\n",
+    "\n",
+    "For JupyterLab,  from the \"Settings\" menu, select \"Advanced Settings Editor\". Select \"Notebook\" from along the left hand side. Then click \"Show Line Numbers\".\n",
+    "\n",
+    "![](images/lineNumbers.png)\n",
+    "<p>\n",
+    "For \"classic\" Jupyter, select the \"View\" menu and then \"Toggle Line Numbers\".   \n",
+    "<p>\n",
+    "If you are running the notebook with VS Code, press <span class=\"keys\"><kbd class=\"key-shift\">Shift</kbd><span>+</span><kbd class=\"key-l\">l</kbd></span> while in command mode.  You can also press the Settings icon(the gear) in the upper right hand corner and then \"Show Notebook Line Numbers\"."
    ]
   },
   {
@@ -42,7 +61,7 @@
    "metadata": {},
    "source": [
     "## Install Dependencies\n",
-    "To ensure that all of the requires dependencies are installed for these notebooks, execute the following cell.\n"
+    "To ensure that all of the required dependencies are installed for these notebooks, execute the following cell."
    ]
   },
   {
@@ -53,6 +72,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "!{sys.executable} -m pip install --upgrade pip setuptools wheel\n",
     "!{sys.executable} -m pip install -r ../requirements.txt"
    ]
   },
@@ -63,11 +83,26 @@
    "source": [
     "The output of the previous cell depends whether or not you already have various modules installed.  \n",
     "\n",
-    "The first line allows the script(program) utilize the 'sys' module, which provides access to various parameters and settings used by the python interpreter.  The corresponding Python documentation is available at <https://docs.python.org/3/library/sys.html> - do not worry if the contents of that page don't make much sense - we will explain the usages of various application program interfaces (APIs) as we go through this course.\n",
+    "The first line allows the script(program) utilize the `sys` module, which provides access to various parameters and settings used by the python interpreter.  The corresponding Python documentation is available at <https://docs.python.org/3/library/sys.html> - do not worry if the contents of that page don't make much sense - we will explain the usages of various application program interfaces (APIs) as we go through this course.\n",
     "\n",
-    "The second line uses the current Python interpreter for the specific environment in which this Jupyter notebook executes.  With that, the line then uses the \"pip\" module to install the latest version of the packages listed in the requirements.txt file.  (\"pip\" can also be executed as a command-line program.)  Any dependencies required by those packages will also be installed - this is why you may see output related to pandas, beautifulsoup4 and soupsieve.\n",
+    "The second line ensures that the latest version of the Python package manager(`pip`) and associated tools are installed with their latest versions.\n",
+    "\n",
+    "The third line uses the current Python interpreter for the specific environment in which this Jupyter notebook executes.  The line then uses the `pip` module to install the latest version of the packages listed in the requirements.txt file.  (`pip` can also be executed as a command-line program.)  Any dependencies required by those packages will also be installed - this is why you may see output related to pandas, beautifulsoup4 and soupsieve.\n",
     "\n",
     "If you are already familiar with with Python, you may be asking why not just execute `!pip install google`.  The short answer is that if the Python interpreter runs within a different `venv` than what the Jupyter server does, the dependency will be installed into the wrong location.  Jake VanderPlas describes this on [his blog in much greater detail](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/).  Jake VanderPlas has written an excellent book - _Python Data Science Handbook, 2nd Ed_ [O'Reilly](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/) [Amazon](https://www.amazon.com/Python-Data-Science-Handbook-Essential-ebook/dp/B01N2JT3ST) which you may want to examine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c630ca36-dc21-440b-b34c-dfc236d8037e",
+   "metadata": {},
+   "source": [
+    "## Notebook Conventions\n",
+    "For each of the notebooks, run the code cells from top to bottom.\n",
+    "\n",
+    "Some of the notebook cells are designed to cause errors when executed.  In some cases, these errors are only meant to show you specific output.  Other times you should make corrections until the code executes correctly.  Other cells have been left blank for you to enter code.  \n",
+    "\n",
+    "Hyperlinks exists to outside resources throughout these notebooks. Unless explicitly mentioned, these links provide background information and are not essential."
    ]
   },
   {
@@ -75,7 +110,7 @@
    "id": "926c8d9c",
    "metadata": {},
    "source": [
-    "*Time to start learning Python ...*"
+    "*Time to start learning Python ...* "
    ]
   }
  ],
