--- a/IntroductionToPython/01-Introduction.ipynb
+++ b/IntroductionToPython/01-Introduction.ipynb
@@ -5,6 +5,8 @@
    "id": "451c809e",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "Effective programming combines problem solving skills, domain knowledge, and then programming skills - these notebooks will target each of these different areas.  The overall goal, though, is not necessarily to teach you Python, but rather how you can solve problems and perform tasks with computer programs.\n",
@@ -16,11 +18,11 @@
     "- analyzing financial data\n",
     "- making decisions (which covers another range from answer simple yes/no questions to driving a car).\n",
     "\n",
-    "As you learn to program, realize that learning to program is not a passive activity.  You can not simply just read documentation and these notebooks.  It will take targeted practice and that practice takes times.  These notebooks will present fundamental concepts and then how those concepts are implemented in Python as well as how you can solve real problems with those concepts.  These notebooks contain a large number of sample code.  Not only should you run this code, you should also make changes to the code and see what happens.  Don't be afraid to make mistakes - try things!.  The computer doesn't care and won't make fun of you.  You should complete the exercises at the end of each notebook.  Yes, we have provided the answers.  However, you will really learn by attempting the exercises on your own. We have written these exercises to reinforce the concepts presented.\n",
+    "Learning to program is not a passive activity.  You can not simply just read documentation and these notebooks.  It will take targeted practice and that practice takes times.  These notebooks will present fundamental concepts and then how those concepts are implemented in Python as well as how you can solve real problems with those concepts.  These notebooks contain a large number of sample code.  Not only should you run this code, you should also make changes to the code and see what happens.  Don't be afraid to make mistakes - try things!.  The computer doesn't care and won't make fun of you.  You should complete the exercises at the end of each notebook.  Yes, we have provided the answers.  However, you will really learn by attempting the exercises on your own. We have written these exercises to reinforce the concepts presented.\n",
     "\n",
-    "The next notebook presents an approach to solve problems with programming.  The key principle with this approach is understand what occurs and then how we can translate that into a series of steps.  And most importantly, to plan how to implement that approach before you start writing code. Once we have the steps (our approach), we can then write code.  As you perform this process, you should have a scratch pad handy to take notes and record your thoughts.\n",
+    "The next notebook presents an approach to solve problems with programming.  The key principle with this approach is understand what occurs and then how we can translate that into a series of steps.  And most importantly, to plan how to implement that approach before you write any code. Once we have the steps (our approach), we can then write code.  As you perform this process, you should have a paper handy to take notes and record your thoughts.\n",
     "\n",
-    "To start our journey to learn computer programming through Python, this notebook contains three separate programs to demonstrate some of the potential of computer programs as well as some fundamental concepts within computer science. As these are some of the first Python programs you might have seen, we will provide a detailed explanation of each step.\n"
+    "To start our journey to learn computer programming through Python, this notebook contains three separate programs to demonstrate some of the potential of computer programs as well as some fundamental concepts within computer science. As these are some of the first Python programs you might have seen, we provide detailed explanations."
    ]
   },
   {
@@ -30,7 +32,7 @@
    "source": [
     "## Sample Program: The Wayback Machine\n",
     "\n",
-    "The following program allows the user to enter a particular website and date. The program will then query the \"Wayback Machine\" hosted at https://archive.org/ to find a copy of that website closest to the entered date and open the results in a new browser window."
+    "The following program allows the user to enter a particular web address (URL) and date. The program will then query the \"Wayback Machine\" hosted at https://archive.org/ to find a copy of that web address closest to the entered date and open the results in a new browser window."
    ]
   },
   {
@@ -73,19 +75,20 @@
    "id": "dc8edee7",
    "metadata": {},
    "source": [
-    "While you may be new to programming, hopefully you could see a little bit how the previous code block worked. In command mode for the previous cell, type <kbd class=\"key-l\">l</kbd></span> to see line numbers.  You can also select the \"View\" menu and then \"Toggle Line Numbers\"\n",
+    "While you may be new to programming, hopefully you can see how the previous code block worked.\n",
+    "<br>Note: If you need to see line numbers, refer to the previous notebook for instructions to enable them.\n",
     "\n",
-    "* lines 1 and 2 let the program use the webbrowser and json libraries.  The webbrowser library lets us open a new browser window with a given URL (line 16).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover JSON in more detail as the course progresses. \n",
-    "* line 3 allows us to use the the `urlopen()` method from the `urllib.request` module. (One of Python's advantages is the large number of included standard libraries and available 3rd party open-source libraries.)\n",
+    "* lines 1 and 2 let the program use the `webbrowser` and `json` libraries.  The `webbrowser` library lets us open a new browser window with a given URL (line 16).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover JSON in more detail as the course progresses. The `json` libraries provides code to parse the JSON data format.\n",
+    "* line 3 allows us to use the the `urlopen()` method from the `urllib.request` module. As you can see from these first three lines, one of Python's advantages is the large number of included standard libraries and available 3<sup>rd</sup> party open-source libraries.\n",
     "* line 5 prints a message to the console telling the user what the program will do\n",
-    "* line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog that's no longer available on the Internet.\n",
-    "* line 7 gets a date in a particular format starting with the year, month, and then day.  This representation is based off an international standard - [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601)\n",
+    "* line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog no longer available on the Internet.\n",
+    "* line 7 gets a date in a particular format starting with the year, month, and then day.  This representation is based off an international standard - [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601) - for dates and times.\n",
     "* line 8 creates a variable called `url` to point to a location on Wayback Machine at https://archive.org/\n",
     "* line 9 opens a connection to that url on archive.org and places the result into the variable `response`\n",
     "* line 10 then reads the text output from that connection, placing the output into the variable `contents`\n",
-    "* line 11 converts the contents of the text variable (which contains a JSON object) to a Python dictionary.  A dictionary stores data in key-value pairs - we will give this in much greater detail a few notebooks from now.\n",
+    "* line 11 converts the contents of the text variable (which contains a JSON object) to a Python dictionary.  A dictionary stores data in key-value pairs - we discuss this in much greater detail in a later notebook.\n",
     "* In lines 12-18, we execute a block of code in a special region.  If any Python errors occur, the error will be caught and  the user will be shown the message in line 18.\n",
-    "* line 13 grabs a specific URL from the results of the Wayback Machine.\n",
+    "* line 13 grabs a specific web address (URL) from the results of the Wayback Machine.\n",
     "* line 14 prints that URL\n",
     "* line 15 tells the user that we will be opening that URL in a new browser window.\n",
     "* line 16 then opens a browser window with that URL. NOTE: this will not work in Google Colaboratory.\n",
@@ -102,7 +105,9 @@
    "metadata": {},
    "source": [
     "## Sample Program: A Google Search\n",
-    "The following series of Python commands will perform a Google search."
+    "In this section, the following series of Python statements will perform a Google search, access one of the pages, and print the extracted text from that page.\n",
+    "\n",
+    "First, we need to make available the functionality to perform the search:"
    ]
   },
   {
@@ -113,6 +118,14 @@
    "outputs": [],
    "source": [
     "from googlesearch import search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fe4fc8a-b5f7-4360-a26a-c628de50c74e",
+   "metadata": {},
+   "source": [
+    "To see help information about the `search()` method from the `googlesearch` module, you can a built-in function `help()`:"
    ]
   },
   {
@@ -127,23 +140,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fe4fc8a-b5f7-4360-a26a-c628de50c74e",
+   "id": "8b0dc8df",
    "metadata": {},
    "source": [
-    "The previous cell allows us to get help information about the `search()` method from the `googlesearch` module.\n",
-    "\n",
-    "And, now, in the following cell, the program searches Google for the search query \"financial technology\". The program then converts that result into a built-in data structure called a list that holds a sequences of \"things/data\" in a particular order.\n",
-    "\n",
-    "As we call `search`, we pass 4 arguments:\n",
-    "* query terms\n",
-    "* num - number of  search results per page\n",
-    "* stop - last result to retrieve\n",
-    "* pause - a time in seconds to wait between making requests to Google.\n"
+    "Within a Jupyter notebook, we can also use a `?` after an item to see the help."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b0a0b774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da6c4bfa",
+   "metadata": {},
+   "source": [
+    "\n",
+    "And, now, in the following cell, the program searches Google for the terms \"financial technology\". The program then converts that result into a built-in data structure called a list that holds a sequence of \"things/data\" in a particular order.\n",
+    "\n",
+    "As we call `search`, we pass 4 arguments:\n",
+    "* query terms\n",
+    "* num - number of  search results per page\n",
+    "* stop - last result number to retrieve\n",
+    "* pause - a time in seconds to wait between making requests to Google.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b79f1e92-f0ff-4e3e-bcb4-e34d929f25a2",
    "metadata": {},
    "outputs": [],
@@ -160,7 +190,7 @@
     "```\n",
     "URLError: <urlopen error [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:997)>\n",
     "```\n",
-    "On MacOS, open a terminal window and execture the following commands (assume Python 3.10 installed):\n",
+    "On MacOS, open a terminal window and execture the following commands (assumes Python 3.10 installed):\n",
     "```\n",
     "cd  /Applications/Python\\ 3.10\n",
     "./Install\\ Certificates.command\n",
@@ -203,7 +233,7 @@
    "outputs": [],
    "source": [
     "print(len(search_results))\n",
-    "print(search_results[3])"
+    "print(search_results[0])"
    ]
   },
   {
@@ -213,7 +243,7 @@
    "source": [
     "This next code block takes that particular URL, opens a network connection to that URL, and then reads the results into the variable `mystr`.\n",
     "\n",
-    "Then the code uses the BeautifulSoup library to parse the HTML document that's returned and then extract all of the text content, placing the results in `text`."
+    "Then the code uses the BeautifulSoup library to parse the HTML document that's returned. It then extracts all of the text content, placing the results in `text`."
    ]
   },
   {
@@ -251,7 +281,7 @@
    "id": "259bbe35",
    "metadata": {},
    "source": [
-    "Yes, the output is rather messy.  Part of the challenge with scraping websites like this is to figure out what to keep and how to effectively combine the results.  Researchers then look to see how we can find meaning in that text. "
+    "Yes, the output is rather messy.  Part of the challenge with scraping websites is to figure out what to keep and how to effectively combine the results. With a text analysis task such as this, researchers look to see how we can effectively extract the relevant text and then find meaning in that text. "
    ]
   },
   {
@@ -260,7 +290,7 @@
    "metadata": {},
    "source": [
     "## Sample Program: Traveling Salesperson and Solvability\n",
-    "The lecture slides presented computer science as being concerned with asking if a particular problem can be solved and if it is solvable, how expensive is it to solve.\n",
+    "Fundamentally, computer science is concerned with asking if a particular problem can be solved and if it is solvable, how expensive is a specific solution.\n",
     "\n",
     "One of the most well-studied problems in computer science is the [traveling salesperson problem](https://en.wikipedia.org/wiki/Travelling_salesman_problem).  Suppose a salesperson has to visit $n$  cities and return back to that starting point.  What is the shortest route that visits each city exactly once?\n",
     "\n",
@@ -272,11 +302,11 @@
     "- City 3, City 1, City 2\n",
     "- City 3, City 2, City 1\n",
     "\n",
-    "But how long would that take to exhaustively search to find the optimal answer?\n",
+    "How long would it take to exhaustively search all of the possibilities to find the optimal answer?\n",
     "\n",
     "$n!$ possible permutations exist.\n",
     "\n",
-    "Assuming we can search 1 billion possibilities in a second, how much time is required to solve the problem for 20 cities?  What about 100?\n"
+    "Assuming we can search 1 billion possibilities in a second, how much time is required to solve the problem for 20 cities?  What about 100?"
    ]
   },
   {
@@ -301,9 +331,9 @@
    "id": "16c923ab",
    "metadata": {},
    "source": [
-    "Try running the above code block for different values for the number of cities.  As you can see if you use a small value, you'll end up with zero as the code uses integral division `//`.  For small values, take out `// num_sec_in_day` to just see the number of seconds or alter the assumption of 1 billion tries per second. How could you convert the result to the number of years?\n",
+    "Try running the above code block for different values for the number of cities.  As you can see if you use a small value, you'll end up with zero as the code uses integral division `//`.  For small values, take out `// num_sec_in_day` to just see the number of seconds or alter the assumption of 1 billion tries per second. How could you convert the result to the number of years?  Try making these code changes in the above cell and re-running the cell. Part of being a computer scientist is to explore different possibilities.\n",
     "\n",
-    "This problem has direct applicability to real-life:\n",
+    "The traveling salesperson problem has direct applicability to real-life:\n",
     "- Creating routes on maps\n",
     "- Delivery schedules for companies such as Amazon, FedEx, and UPS."
    ]
@@ -314,7 +344,9 @@
    "metadata": {},
    "source": [
     "## Abstraction\n",
-    "One of the keys to successful programming is applying abstraction.  We take advantage of abstraction when we use existing classes, modules, and functions. Through abstraction, programmers hide the underlying complexity of how something works.  Through the public interfaces (e.g., functions) we can take advantage of other developer's work.  In the preceding examples, we used several abstractions to solve real-life problems without having to understand the precise implementation details.  We will also apply abstraction to model real-life systems, problems, and tasks."
+    "One of the keys to successful programming is to use abstraction - to focus on the outside view of an object or function - not necessarily the exact details and steps to perform a specific task. For example, to query the Wayback Machine, a number of details where abstracted away by the `urllib` module. We did not have to concern ourselves with opening a network connection, following the HTTP protocol, and parsing the results.  The `urllib` module took care of those tasks for us with an abstracted (simplified) view to open a URL and read the response. \n",
+    "\n",
+    "We take advantage of abstraction when we use existing classes, modules, and functions. Through abstraction, programmers hide the underlying complexity of how something works.  We can solve real-life problems without having to understand the precise implementation details.  We will also apply abstraction to model real-life systems, problems, and tasks."
    ]
   },
   {
@@ -346,7 +378,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f957281fc3781c316a9193433068c70453e544896b85fb65515914100b2495a"
+   }
   }
  },
  "nbformat": 4,
