--- a/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
+++ b/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
@@ -5,6 +5,8 @@
    "id": "c1836d3b",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Problem Solving by Progamming\n",
     "*aka Performing Tasks with Computers*\n",
     "\n",
@@ -39,7 +41,7 @@
     "\n",
     "As you write these steps down, make sure you explicitly state everything.  Are there implicit steps/instructions missing? A computer can not infer steps that our mind implicitly places into steps.  For example, in the above steps, how do I visit that particular website (open up a browser window and enter the url into the address/search bar). Many computer programming books like to use the examples of recipes or knitting patterns to demonstrate the sequences of steps to be followed.\n",
     "\n",
-    "Step Three involves generalizing our steps.  Our initial solution works for a specific site and date, but also requires manual intervention.  We need to research ways to programmatically access this way. Often, sites provide an [application programming interface (API)](https://en.wikipedia.org/wiki/API#Web_APIs) as way to access data. Perform web search on \"wayback machine api\" leads to this page: https://archive.org/help/wayback_api.php. In reading this page, we see that the Wayback Machine has an API endpoint with URLs that following this example: https://archive.org/wayback/available?url=example.com&timestamp=20060101\n",
+    "Step Three involves generalizing our steps.  Our initial solution works for a specific site and date, but also requires manual intervention.  We need to search for ways to programmatically access the data. Often, sites provide an [application programming interface (API)](https://en.wikipedia.org/wiki/API#Web_APIs) as way to access data. Performing a web search on \"wayback machine api\" leads to this page: https://archive.org/help/wayback_api.php. In reading this page, we see that the Wayback Machine has an API endpoint with URLs that follows this example: https://archive.org/wayback/available?url=example.com&timestamp=20060101\n",
     "\n",
     "In other situations, you will need to research the problem domain to gain a deeper understand of what's occurring and how you can automate something."
    ]
@@ -49,9 +51,9 @@
    "id": "c594c968",
    "metadata": {},
    "source": [
-    "Cool. Now, we know how to programmatically access the wayback machine, but we still don't have a general algorithm.  We have something that works for a specific problem, but we want to find something that works for all instances of this problem - which means any site and any date.  The purpose of this step is step examine why you performed your steps, what patterns may exist in the possible solution, and how various inputs can be handled.\n",
+    "Cool. Now, we know how to programmatically access the Wayback Machine, but we still lack a general algorithm.  We have something that works for a specific problem, but we want to find something that works for all instances of this problem - which means any site and any date.  The purpose of this step is to examine why you performed your steps, what patterns may exist in the possible solution, and how various inputs can be handled.\n",
     "\n",
-    "To generalize this solution, we need to pass the url and date as inputs into the process.  For right now, we can just have the user enter input these two values.  \n",
+    "To generalize this solution, we need to pass the url and date as inputs into the process.  For right now, we can just have the user enter these two values.  \n",
     "\n",
     "So let's look at the generalized set of steps:\n",
     "<pre>\n",
@@ -70,18 +72,20 @@
    "id": "be97dc85",
    "metadata": {},
    "source": [
-    "In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm.  This example is relatively straightforward, but in more complex situations we'll want to have at least some assurance here that our approach is sound. For all but the simplest situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they can not prove that defects exists.  Such proof requires formal verification using models and logic that can be reasoned upon.  Hardware manufacturers are probably the leading use of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we will look at different ways to quantify the appropriate amount of testing required. \n",
+    "In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm. We also need to test these steps by varying the inputs to see how our algorithms reacts.  This example is relatively straightforward, but in more complex situations we will want to have at least some assurance here that our approach is sound. Still, what happens if we enter an empty URL or date?  What if the URL does not exist in the Wayback Machine?  What happens if the date is in the wrong format? How does the program behave if our network connection is down?\n",
     "\n",
-    "Side Note: One of the fundamental questions within Computer Science has been whether or not it can be proved that for an arbitrary program will it halt for a given input.  Known as the [Halting Problem](https://en.wikipedia.org/wiki/Halting_problem), this problem has been used a the basis to show that problems are equivalent to it, and hence unsolvable.  Proving the absence of all defects is one such problem.\n",
+    "For all but the simplest situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they can not prove that defects exists.  Such proof requires formal verification using models and logic that can be reasoned upon.  Hardware manufacturers are probably the leading use of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we will look at different ways to quantify the appropriate amount of testing required. \n",
     "\n",
-    "The goal of these first four steps is to have performed sufficient planning to minimize and eliminate as we then convert our steps into computer code and test that code.  Often, you will here this referred to as \"design\".  Our \"requirement\" was to develop a routine to search the Wayback Machine for a particular URL and date, and then to open a web browser with the closest URL available in the archive.  \n",
+    "Side Note: One of the fundamental questions within Computer Science has been whether or not it can be proved that for an arbitrary program will it halt for a given input.  Known as the [Halting Problem](https://en.wikipedia.org/wiki/Halting_problem), this problem has been used as the basis to show other problems are equivalent to it, and hence unsolvable.  Proving the absence of all defects is one such problem.\n",
+    "\n",
+    "The goal of these first four steps is to have performed sufficient planning to minimize and eliminate issues as we convert our steps into computer code and test that code.  Often, you will here this referred to as \"design\".  Our \"requirement\" was to develop a routine to search the Wayback Machine for a particular URL and date, and then to open a web browser with the closest URL available in the archive.  \n",
     "\n",
     "From a documentation perspective, the expected outcome should contain:\n",
     "* Inputs to the routine\n",
     "* Outputs from the routine \n",
     "* Pseudocode (steps in the routine)\n",
     "\n",
-    "This \"outcome\" is basis of an *algorithm*, which is a well-defined procedure (series of steps) that takes some input and produces some value or set of values (output).[2]\n",
+    "This \"outcome\" is basis of an *algorithm*, which is a well-defined procedure (series of steps) that takes some input and produces some value or set of values (output).[2]  Following the steps exactly in the algorithm will solve a particular problem.\n",
     "\n",
     "Pseudocode Guidelines: [3]\n",
     "* Use natural language statements that precisely describe specific operations\n",
@@ -99,7 +103,7 @@
     "\n",
     "In Step 6, we then run and test the program to see if it works.  If all of our tests pass, we are complete.  If we find issues, then we need to debug our program (Step 7) to find and correct those issues, which we'll fix be going back to Step 5.\n",
     "\n",
-    "As you increase your coding skills, much of this process will become second nature and you can minimize/combine steps. However you should always spend an appropriate amount of time planning out your solution.  For easier problems, this can just be a few scribbles or notes.  For more complex problems and large systems, you will spend a substantial amount of time performing research to figure out the best approach and then creating documentation for that approach."
+    "As you increase your coding skills, much of this process will become second nature and you can minimize/combine steps. However you should always spend an appropriate amount of time planning out your solution.  For easier problems, this can just be a few scribbles or notes.  For more complex problems and large systems, you will spend a substantial amount of time researching the best approach and then documenting that approach."
    ]
   },
   {
