--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -5,6 +5,8 @@
    "id": "9da29614-ae27-4326-8e99-61aa95666451",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Data:Types, Values, Variables, and Names\n",
     "\n",
     "A computer program is a series of instructions that operate on data. To build effective programs, you will need to understand\n",
@@ -12,7 +14,7 @@
     "\n",
     "Another way to look at programming is to consider Lego bricks.  \n",
     "![Legos](images/lego_bricks.jpg)\n",
-    "<sub><sup>Source: https://commons.wikimedia.org/wiki/File:Lego_bricks.jpg</sup></sub>\n",
+    "<br><sub><sup>Source: https://commons.wikimedia.org/wiki/File:Lego_bricks.jpg</sup></sub>\n",
     "\n",
     "These bricks come in a large number of shapes, sizes, and colors.  Anyone can quickly start combining them together and novices can produce complex models while following instructions.  However, Lego master builders can produce truly novel models. They accomplish these builds through a deep understanding of how all of the different pieces can work together. They also spend a significant amount of time planning out their builds - just as we do when we document the algorithmic approach in the first four steps of the \"Seven Steps\".\n",
     "\n",
@@ -36,14 +38,14 @@
     "- an identity (something that uniquely identifies that item).\n",
     "\n",
     "To help manage these objects, Python also tracks:\n",
-    "- an object's type - this defines what an object can do and data is stores\n",
-    "- a reference count that tracks how many references exist to that particular object.\n",
+    "- an object's type - this defines what an object can do and data it stores\n",
+    "- a reference count that tracks how many other objects links to this object.\n",
     "\n",
-    "Many other programming langauges have the concept of a primitive type, which simply contains a particular value.\n",
+    "Many other programming languages have the concept of a primitive type, which simply contains a particular value.\n",
     "\n",
     "Every object has a particular type that it is associated with.  That type determines what state (information) an object can know as well as what methods can be be called on that object.\n",
     "\n",
-    "Practically, objects help us represent something. As we'll see in the next section, this can be numeric values and text.  Objects can also be more complicated data collections - such as a list of items. In later notebooks, we learn how to build our own object types (classes) to provide abstractions (models) of the world we are trying to represent in our programs."
+    "Practically, objects help us represent something. Initially, we will just use numbers and text. Objects can also be more complicated data collections - such as a list of items. In later notebooks, we learn how to build our own object types (classes) to provide abstractions (models) of the world we are trying to represent in our programs."
    ]
   },
   {
@@ -98,9 +100,9 @@
    "source": [
     "## Variables\n",
     "\n",
-    "Variables are a named piece of the computer's memory that can hold a particular object. Technically, variables just refer to that memory location as their value.  In a more abstract sense, we can view variables in Python as places to store information/data of a particular type.\n",
+    "Variables are a named piece of the computer's memory that can hold a particular object. Technically, variables just refer to that memory location as their value.  In a more abstract sense, variables in Python are places to store information/data of a particular type.\n",
     "\n",
-    "In this code block, we declare three variables:"
+    "This code block declares three variables:"
    ]
   },
   {
@@ -120,14 +122,14 @@
    "id": "2b7d0e1b-e06a-4597-a6fa-5156b59a9eee",
    "metadata": {},
    "source": [
-    "x holds an integer value, pi holds a holds a floating point value, and message holds a text string.  The equals sign('=') specifies an _assignment statement_.  You should read these statements as\n",
-    "- set _x_ to the integer 6\n",
-    "- set _p_ to the float 3.14159\n",
-    "- set _message_ the the string \"Hello World!\"\n",
+    "`x` holds an integer value, `pi` holds a holds a floating point value, and `message` holds a text string.  The equals sign(`=`) specifies an _assignment statement_. Programmers read these statements as\n",
+    "- set `x` to the integer 6\n",
+    "- set `p` to the float 3.14159\n",
+    "- set `message` to the string \"Hello World!\"\n",
     "\n",
-    "Those above statements created three variables - x, pi, and message - and assigned to them the value on the right side of the statement. These values on the right hand side are objects of their respective types (int, float, and string)\n",
+    "Those above statements created three variables - `x`, `pi`, and `message` - and assigned to them the value on the right side of the statement. These values on the right hand side are objects of their respective types (int, float, and string)\n",
     "\n",
-    "Unlike equations you may be used to solving in algebra or other advanced mathematics, programming languages typically do not have the capability to solve the equation even though it may appear capable of performing.  Instead, the right side of the equals sign is evaluated and then the result (an 'rvalue') is assigned to a variable (an 'lvalue') on the left side of the equation.\n",
+    "Unlike equations in algebra or other advanced mathematics, programming languages typically do not have the capability to solve the equation even though it may appear capable.  Instead, the right side of the equals sign is evaluated and then the result is assigned to a variable on the left side of the equation.\n",
     "\n",
     "\n",
     "To get a current variable's type, we can use a special function `type()`"
@@ -150,7 +152,7 @@
    "source": [
     "As an excercise, re-run the proceeding code block, but see what the other types are for ```x``` and ```message``` by replacing ```pi``` with those variable names.\n",
     "\n",
-    "You should also try defining variables of the other types from the above table.  Use these following cells to experiment:"
+    "Try defining variables of the other types from the above table.  Use these following cells to experiment:"
    ]
   },
   {
@@ -159,7 +161,9 @@
    "id": "59984dc0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# enter code to see what the types of x and message\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -167,13 +171,16 @@
    "id": "73a68e6a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# enter code to create other variables with different types from the types table.\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "94279dcd-3306-4516-b541-e85815ec01fa",
    "metadata": {},
    "source": [
+    "## Functions\n",
     "Functions are a named, reusable block of code.  They can take any number of parameters to send data into the function.  Functions can then return any number of results back to the calling block.  Initially, we will make use of Python's built-in functions, but we will develop our own functions to perform specific tasks.\n",
     "\n",
     "You can print out the current value of a variable with the built-in function ```print()```.  Again, try printing the other variables once you execute this code block."
@@ -187,6 +194,16 @@
    "outputs": [],
    "source": [
     "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b509d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add some more print statements to display the values of the variables declared earlier in this notebook.\n"
    ]
   },
   {
@@ -212,7 +229,9 @@
    "id": "46e2223a-fcf2-4c9f-b15e-3d8a4b10f1fd",
    "metadata": {},
    "source": [
-    "You should have received a \"NameError\" specifying that variable named \"msg\" was not defined.  One of the key challenges while programming is to find and correct mistakes such as this.  "
+    "You should have received a \"NameError\" specifying that variable named \"msg\" was not defined.  One of the key challenges while programming is to find and correct mistakes such as this.  \n",
+    "\n",
+    "Before we use a variable on the right hand side of an assignment or in other statements, we must first define that variable by assigning a value to it."
    ]
   },
   {
@@ -228,7 +247,7 @@
     "\n",
     "Variable names are case sensitive.\n",
     "\n",
-    "By convention, variable names in Python are lower case with words separate by underscores to improve readability:"
+    "By convention, variable names in Python are lower case with words separated by underscores to improve readability:"
    ]
   },
   {
@@ -246,11 +265,11 @@
    "id": "14ea57e7",
    "metadata": {},
    "source": [
-    "To assist yourself and others reading your code, make sure to use informative names for variables.  What if we used\n",
+    "To assist yourself and others reading your code, use informative names for variables.  What if we used\n",
     "```\n",
     "g = 3600\n",
     "```\n",
-    "in the preceding code block?  Would you be able to figure out the purpose and meaning of g?  What happens if you came back to the code a year from now?"
+    "in the preceding code block?  Would you be able to figure out the purpose and meaning of `g`?  What happens if you came back to the code a year from now?"
    ]
   },
   {
@@ -299,7 +318,7 @@
    "metadata": {},
    "source": [
     "## Statements\n",
-    "The assignments and function calls are examples of statements - a unit of instruction to the computer to perform a specific action."
+    "The assignments and function calls are examples of statements - a unit of instruction to the computer to perform a specific action.  Programs are just a series of these statements."
    ]
   },
   {
@@ -308,11 +327,11 @@
    "metadata": {},
    "source": [
     "## Objects Redux\n",
-    "To circle back to the start of this notebook, we mentioned that all data in Python are managed as objects.  As such, we typically have ways to inspect the state of a particular object as well as to execute methods on those objects.\n",
+    "To circle back to the start of this notebook, all data in Python are managed as objects.  As such, we typically have ways to inspect the state of a particular object as well as to execute methods on those objects.\n",
     "\n",
     "While the data shown in this notebook have relatively simple states (i.e., just the value of the integer, float, or string datatype), they do have additional behavior defined.\n",
     "\n",
-    "Integer values are typically represented as [binary numbers](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary) witin a computer's memory.  To see how long a particular representation is (i.e., how many zeros and ones are needed), we can call the ```bit_length()``` method on an integer. `bit_length()` is an example of object behavior."
+    "Integer values are typically represented as [binary numbers](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary) within the computer's memory.  To see how long a particular representation is (i.e., how many zeros and ones are needed), we can call the ```bit_length()``` method on an integer. `bit_length()` is an example of object behavior."
    ]
   },
   {
@@ -331,15 +350,15 @@
    "id": "76d6b0e3",
    "metadata": {},
    "source": [
-    "When you see a pattern such as `x.bit_length()` that's an example of a method to the object that `x` references.\n",
+    "When you see a pattern such as <code><i>object_name.method</i>()</code> (e.g., `x.bit_length()`) that's using behavior associated with that object.  Programmers will read this as calling _method_name_ for _object_name_. Methods are pretty much the same thing as functions, except that they belong to a particular object.\n",
     "\n",
-    "As with functions, we will use a number of predefined object types (class) as well as writing our own.\n",
+    "As with functions, we will use a number of predefined object types (classes) as well as writing our own.\n",
     "\n",
     "To see the available methods on an object, we use the built-in ```dir()``` function.  This can be called with a literal value, a type name, or a variable.  For example,\n",
     "```\n",
-    "dir(x)\n",
     "dir(65535)\n",
     "dir(int)\n",
+    "dir(x)\n",
     "```\n",
     "will all return the same output."
    ]
@@ -356,11 +375,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44ce419f",
+   "metadata": {},
+   "source": [
+    "As you examine the output for ```dir(int)```, you'll notice a number of methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve as special functions within Python (initialize an object ```__init__```, produce a string representation of an object ```__str__```,...) or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.) Normally, we do not directly call these methods, but rather implicitly invoked them through other operations.\n",
+    "\n",
+    "For example, the following code uses `__abs__()` from the `int` class to get the absolute value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "da377bc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = -50\n",
+    "a = abs(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88cd4993",
    "metadata": {},
    "source": [
-    "As you examine the output for ```dir(int)```, you'll notice a number of methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve either special functions within Python (initialize an object ```__init__```, produce a string representation of an object ```__str__```,...) or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.)\n",
-    "\n",
+    "## Getting Help\n",
     "To get help on a particular method, we can use the ```help()``` method.  For these, we'll need to pass either an object reference or the type name along with the method we want help for)"
    ]
   },
@@ -404,25 +452,134 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fbeaca9",
+   "id": "93dcd91c",
    "metadata": {},
    "source": [
-    "## Review questions\n",
+    "## Jupyter Notes\n",
+    "Within the Jupyter environment, we can also access the help documentation with a `?` after an item:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4eef853c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eccae246",
+   "metadata": {},
+   "source": [
+    "You can also see the relevant source code of the object by typing `??`.  If the source code does not appear that means the function or object is not directly implemented in Python, but rather in C or C++."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "32ff91ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf6e2869",
+   "metadata": {},
+   "source": [
+    "In Jupyter, as you type an object or function name, you can press the tab key to autocomplete the current term or see a pop-up list of possible choices.  After each of the items in the next code block, press the Tab key."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d37383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.bit_l\n",
+    "a."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4220949f",
+   "metadata": {},
+   "source": [
+    "One final note with regards to Jupyter.  We have used a mixture of just using a variable by itself on the last line of a code block or printing that value.  If the last line of a code block returns a value, Jupyter automatically takes that return value and prints the value.  Simply typing a variable name by itself, returns the value of that variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "75079198",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62394239",
+   "metadata": {},
+   "source": [
+    "We have also explicitly printed the value calling the `print()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e1b4c4d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cb20dd4",
+   "metadata": {},
+   "source": [
+    "While in these two examples, the output has been the same, that's not universally true.\n",
     "\n",
-    "1. What  are the types of the following values?\n",
-    "  1. 2.7128\n",
-    "  2. 1838\n",
-    "  3. \"1892\"\n",
-    "  4. False\n",
-    "2. Are the follow legal variable names? (yes /no)\n",
-    "  1. a\n",
-    "  2. _test\n",
-    "  3. 912ara\n",
-    "  4. area_919\n",
-    "  5. pass\n",
-    "3. What function is used to display a value?\n",
-    "4. x and X are treated as the same variable identifier in Python.  (True/False)\n",
-    "5. What does a variable's type tell us?"
+    "If we just have a value by itself on a line and then another statement, Jupyter will not display the value.  The next code block does not display any value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4b0fca39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a\n",
+    "x = 10 "
    ]
   }
  ],
