--- a/IntroductionToPython/05-Control.ipynb
+++ b/IntroductionToPython/05-Control.ipynb
@@ -5,16 +5,18 @@
    "id": "83a93765",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Control Statements\n",
     "So far, we have seen some basic programs and uses of data, but we have not had to make any decisions to decide what code to execute or to repeat the execution of certain lines of code. Control statements allow us to alter a program's behavior based upon different conditions within the data.\n",
     "\n",
-    "In real-life, we run across many different situations where we choose different behavior based upon some condition:\n",
+    "In our daily lives, we run across many different situations where we choose different behavior based upon some condition:\n",
     "- What to wear based upon the weather\n",
     "- When to wake up and go to sleep - based upon the time of day\n",
-    "- Converting values into different types - for a given numeric grade, what's the equivalent letter grade\n",
+    "- Converting values into different types - for a given numeric grade, what's the equivalent letter grade?\n",
     "- Restrictions on who can drive or drink. (and it better not be both at the same time!)\n",
     "\n",
-    "In this notebook, we will see how to use an `if` statement to execute different blocks of based upon some a conditional expression that evaluates to a Boolean (`True` or `False`)."
+    "In this notebook, we will see how to use an `if` statement to execute different blocks of code based upon a conditional expression that evaluates to a Boolean (`True` or `False`)."
    ]
   },
   {
@@ -23,12 +25,12 @@
    "metadata": {},
    "source": [
     "## if statement\n",
-    "We use the `if` statement to execute a block of code when a certain condition is true.  Here's the basic syntax:\n",
-    "```\n",
+    "We use the `if` statement to execute a block of code when a certain condition is true.  The basic syntax:\n",
+    "<pre>\n",
     "if condition:\n",
-    "    block\n",
-    "```\n",
-    "If the condition evaluates to `True`, then the statements in the block are executed.  \n",
+    "    <i>block</i>\n",
+    "</pre>\n",
+    "If the condition evaluates to `True`, then the statement(s) in the block are executed.  \n",
     "\n",
     "Below, we present a [flowchart](https://en.wikipedia.org/wiki/Flowchart) to represent the execution of an `if` statement.  Flowcharts can help you visualize and understand a process. As such, we use flowcharts to show the overview of different Python statements.  Initially, you may want to draw flowcharts to help you understand a problem or a program, but generally speaking they are too cumbersome to use regularly.\n",
     "- Ovals or rounded rectangles are used to indicate the beginning or end of a program . *terminal*\n",
@@ -36,7 +38,8 @@
     "- Diamonds represent a condition operation to choose which path a program or process will follow. *decision*\n",
     "- Arrows represent the process's (or program's) order of operation.  Labels may indicate decision paths.  *flowline*\n",
     "- Parallelograms (not shown) represent the process of data input and output.\n",
-    "As necessary, you can augment these diagrams with whatever notes, variable changes, etc. to help document a given process."
+    "\n",
+    "As necessary, you can augment these diagrams with whatever notes, variable assignments, etc. to help document a given process."
    ]
   },
   {
@@ -64,7 +67,7 @@
    "id": "1092393d",
    "metadata": {},
    "source": [
-    "In the above example, `int(age) > = 16` is the conditional expression that's evaluated.  With Python, this is any expression that can evaluate to  `True` or `False`.  In an earlier notebook, we presented that any numeric value that is nonzero is `True` and and zero value is `False`. For strings, any non-empty string is `True` and an empty string is `False`.  Of course, we can use Boolean variables as well."
+    "In the above example, `int(age) >= 16` is the conditional expression that's evaluated.  With Python, this is any expression that can evaluate to  `True` or `False`.  In an earlier notebook, we presented that any numeric value that is nonzero is `True` and and zero value is `False`. For strings, any non-empty string is `True` and an empty string is `False`.  Of course, we can use Boolean variables as well."
    ]
   },
   {
@@ -76,7 +79,7 @@
    "source": [
     "team_won = True\n",
     "if team_won:\n",
-    "    print (\"Let's celebrate\")"
+    "    print (\"Let's celebrate!\")"
    ]
   },
   {
@@ -125,14 +128,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c480e52",
+   "metadata": {},
+   "source": [
+    "In all of the above code examples, the print statements after the `if` statements form the \"true-block\" as shown in the basic syntax and the flowchart.  These code blocks can be any number of statements, including nested `if` statements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4775d0a1",
    "metadata": {},
    "source": [
     "## Comparison Operators\n",
-    "Sometimes, using a single value is sufficient for an `if` statement. Python, though, offers a number conditional operators that we can use - \n",
+    "Sometimes, using a single value is sufficient for an `if` statement. Python, though, supports a number of conditional operators:\n",
     "\n",
-    "| Comparison Operator | Example | Meaning |\n",
-    "| :---- | :---- | :---- |\n",
+    "| Comparison<br>Operator | Example | Meaning |\n",
+    "| :---: | :---- | :---- |\n",
     "| `>` | `x > y` | `x` is greater than `y`\n",
     "| `<` | `x < y` | `x` is less than `y`\n",
     "| `>=` | `x >= y` | `x` is greater than or equal to `y`\n",
@@ -148,10 +159,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print( 4 > 5)\n",
-    "print( 10 > 5)\n",
-    "print( 5 <= 6)\n",
-    "print( \"hello\" == \"hel\"+\"lo\")  # Use string concatenation to create \"hello\""
+    "print(\"4 < 5:\", 4 > 5)\n",
+    "print(\"10 > 5:\", 10 > 5)\n",
+    "print(\"5 <= 6:\", 5 <= 6)\n",
+    "print(\"Hello:\", \"hello\" == \"hel\"+\"lo\")  # Use string concatenation to create \"hello\""
    ]
   },
   {
@@ -159,11 +170,8 @@
    "id": "5fc8a9c7",
    "metadata": {},
    "source": [
-    "In all of the above code examples, the print statements after the `if` statements form the \"true-block\" as shown in the basic syntax and the flowchart.  These code blocks can be any number of statements, including additional, nested `if` statements.\n",
-    "\n",
-    "# if else statement\n",
+    "## if else statement\n",
     "In addition to executing the true block, Python allows for an optional `else` block that executes if the condition evaluates to `False`.\n",
-    "\n",
     "\n",
     "![](images/ifElseStatement.png)"
    ]
@@ -191,7 +199,7 @@
    "source": [
     "In Python, indention determines the code blocks that execute for the `if` statement.  The Python convention is to use four spaces.  However, you can use any amount of spaces that you like as long as you are consistent with the spacing.  Avoid using tabs or mixing tabs and spaces - this will lead to consistency issues.  \n",
     "\n",
-    "As you write programs, you'll need to make sure your code blocks are properly indented -"
+    "As you write programs, make sure the code blocks are properly indented -"
    ]
   },
   {
@@ -206,7 +214,22 @@
     "    print(\"You can drive!\")\n",
     "else:\n",
     "    print(\"You are not old enough to drive.\")\n",
-    "print(\"You will need to wait until you are 16.\")  #oops, didn't indent this properly"
+    "print(\"You will need to wait until you are 16.\")  #oops, didn't indent this properly, semantic error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b785784a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = 10\n",
+    "if age >= 16:\n",
+    "    print(\"You can drive!\")\n",
+    "else:\n",
+    "    print(\"You are not old enough to drive.\")\n",
+    "   print(\"You will need to wait until you are 16.\")   #syntax error - indention level not matched"
    ]
   },
   {
@@ -215,7 +238,7 @@
    "metadata": {},
    "source": [
     "## if elif statement\n",
-    "If you have several conditions that you need to be evaluated at once, you can use an `if elif` statement. As with the `if` statment, you can have an option `else` portion at the the end of the statement. \n",
+    "If you have several conditions that you need to evaluate in order, you can use an `if elif` statement. As with the `if` statment, you can have an option `else` portion at the the end of the statement. \n",
     "\n",
     "![](images/ifElifStatement.png)"
    ]
@@ -245,7 +268,9 @@
    "id": "9b498901",
    "metadata": {},
    "source": [
-    "Python does evaluate these if clauses in the order that they are listed.  What will the following code produce?"
+    "Python evaluates these if clauses in their listed order.\n",
+    "\n",
+    "What does the following code produce?"
    ]
   },
   {
@@ -273,7 +298,7 @@
    "id": "44a9fa43",
    "metadata": {},
    "source": [
-    "If you forget the colon at the end of any of these expressions, the Python interpretor will print \"SyntaxError\"."
+    "Not including the colon at the end of an expression will cause the Python interpretor to report a \"SyntaxError\"."
    ]
   },
   {
@@ -283,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True\n",
+    "if True                # missing :    SyntaxError\n",
     "    print(\"Message\")"
    ]
   },
@@ -295,7 +320,7 @@
     "## Nested Ifs\n",
     "As the code block can contain any Python statement, `if` statements can also be nested.\n",
     "\n",
-    "Change the values for `salary`, `commute_time_min`, and `free_coffee` to see how the following logic works:"
+    "Run the following code block several times, changing the values for `salary`, `commute_time_min`, and `free_coffee` to see how the logic works.  Produce each of the four different outputs."
    ]
   },
   {
@@ -322,6 +347,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c726aef",
+   "metadata": {},
+   "source": [
+    "While it may have seemed frustrating to produce each of these outputs, this is an essential component of testing - following each of the different paths our program can follow.\n",
+    "\n",
+    "The follow table shows the different possibilities.  Notice that we only listed a couple of different values for `salary` and `commute_time_min`.  Our program's logic creates equivalence classes for these variables.  Any `salary` value less than or equal to 50,000 is in one class, and any value greater than 50,000 is in another equivalence class.  Similarly, any value for `commute_time_min` < 60 is in one class and all of the other values are in another class.  `free_coffee` only has two possibilities.\n",
+    "\n",
+    "| Salary | Commute Time | Free Coffee | Expected Output\n",
+    "|  ----: | ----: | :---- | :---- |\n",
+    "| 50000  | | | I'm worth more than that\n",
+    "| 60000  | 70 |  | I don't want to drive that far\n",
+    "| 60000  | 50 | True | Cool.  I'm going to like this job\n",
+    "| 60000  | 50 | False | Close location and I like the salary, but I NEED coffee"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9780531a",
    "metadata": {},
    "source": [
@@ -329,7 +371,7 @@
     "Python offers three Boolean (logical) operators.\n",
     "\n",
     "### And\n",
-    "The `and` operator joins two conditional epxressions and ensures that both conditional expressions are `True` for the \"true block\" to execute. If either of the conditions is `False`, then the entire `and` expression if `False`."
+    "The `and` operator joins two conditional epxressions and ensures that both conditional expressions are `True` for the \"true block\" to execute. If either of the conditions is `False`, then the entire `and` expression evaluates to `False`."
    ]
   },
   {
@@ -355,7 +397,7 @@
     "Practice running the above code block with different values for age and gender.\n",
     "\n",
     "### Or\n",
-    "The `or` operator also joins two conditional expressions but as long as long as at least one of the expressions is `True`.  Only if both expressions are `False` will the expression evalute to `False`."
+    "The `or` operator also joins two conditional expressions but as long as at least one of the expressions evaluates to `True`.  Only if both expressions are `False` will the expression evalute to `False`."
    ]
   },
   {
@@ -404,7 +446,7 @@
     "\n",
     "For `or`, if the first expression evaluates to `True`, the second expression will not be evaluated as the result of the operator will always be `True`.\n",
     "\n",
-    "Note: `def` lets us define user created functions which will be covered in the next notebook."
+    "Note: `def` allows us to create functions which will be covered in the next notebook."
    ]
   },
   {
@@ -415,7 +457,7 @@
    "outputs": [],
    "source": [
     "def expr(num, result):\n",
-    "    print ('Expression', num, result)\n",
+    "    print ('evaluating', num, result)\n",
     "    return result\n",
     "\n",
     "if expr(1,False) and expr(2,True):\n",
@@ -431,12 +473,7 @@
     "if expr(1,False) or expr(2,True):\n",
     "    print (\"expr #3 was True\\n\")\n",
     "else:\n",
-    "    print (\"If #3 was false\\n\")   \n",
-    "    \n",
-    "while expr(1,True) or expr(2,True):\n",
-    "    print (\"in loop\\n\")\n",
-    "    break;\n",
-    "    "
+    "    print (\"If #3 was false\\n\")   "
    ]
   },
   {
@@ -444,15 +481,23 @@
    "id": "d7e4a823",
    "metadata": {},
    "source": [
-    "Additionally, the result of a logical expression is not always `True` or `False`.  In the following, Python returns the last value evaluated."
+    "The result of a logical expression is not always `True` or `False`.  In the following, Python returns the last value evaluated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c7b5e26e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "a = 0\n",
     "b = 3\n",
@@ -506,7 +551,7 @@
    "outputs": [],
    "source": [
     "def expr(num, result):\n",
-    "    print ('Expression', num, result)\n",
+    "    print ('evaluating', num, result)\n",
     "    return result\n",
     "\n",
     "print (expr(1,True) and (expr(2,False) or expr(3,True)))"
@@ -549,15 +594,26 @@
    "id": "b8cbd14e",
    "metadata": {},
    "source": [
-    "Note that these can be rewritten with an `and` operator."
+    "Note: These comparisons can be rewritten with an `and` operator."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "07307602",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 10\n",
     "5 <= x and x <= 20"
@@ -592,22 +648,24 @@
     "## Variables Revisited\n",
     "Think of variables as values with names; those names describe what those values represent.\n",
     "\n",
-    "As we use variables within our Python programs, there are three main ways we use them.\n",
+    "Variables appear within our Python programs under one of these three usages:\n",
     "1. To declare and set a value to the variable. \n",
     "2. To assign the the variable to a new value (object)\n",
     "3. Use the variable - whether in an expression or outputting the value in same fashion\n",
     "\n",
-    "As we declare a variable, remember that it's name must a legal identifier - must start with a letter or an underscore.  The variable name only contain letters, numbers, and underscores.  The variable name can not be one of Python's reserved words.  Before we use a variable, we must declare it first and assign some value to it.\n",
+    "As we declare a variable, remember that the name must be a legal identifier: The variable name must start with a letter or an underscore.  The variable name only contain letters, numbers, and underscores.  The variable name can not be one of Python's reserved words.\n",
+    "\n",
+    "Before we use a variable, we must declare it first and assign some value to it.\n",
     "\n",
     "To assign a value to a variable, we use an assignment operator:\n",
     "<pre>\n",
     "a = 45 * 10\n",
     "</pre>\n",
-    "As you read code like that, you should see it as \"set a to the value of 45 times 10\" or \"a is assigned <i>expression</i>.\n",
+    "Programmers read that line of code as \"set a to the value of 45 times 10\" or \"a is assigned <i>expression</i>\".\n",
     "\n",
     "The first time a value is assigned to a variable is also known as initializing the variable.\n",
     "\n",
-    "Once we have assigned a value/object to a variable, we can then use that value:"
+    "Once a variable has been assigned a value or to an existing object, that variable can then be used in other statements and expressions."
    ]
   },
   {
@@ -628,7 +686,7 @@
    "id": "6cbb54f0",
    "metadata": {},
    "source": [
-    "Unlike many other programming languages, Python is dynamically types.  As such, we can change the type of a variable by assigning different values(objects) to it."
+    "Unlike many other programming languages, Python is dynamically typed.  As such, we can change the type of a variable by assigning different values(objects) to it."
    ]
   },
   {
@@ -646,9 +704,9 @@
    "source": [
     "Exercise 1: Paycheck\n",
     "\n",
-    "Write a program that computes the a simple weekly paycheck for an individual.\n",
+    "Write a program that computes a simple weekly paycheck for an individual.\n",
     "The user should be prompted for the number of hours worked, and the payrate.\n",
-    "If the user works over 40 hours, the hours over 40 hours should be paid at 1.5 times the hourly rate.\n",
+    "If the user works over 40 hours, then the hours over 40 hours should be paid at 1.5 times the hourly rate.\n",
     "Print the initial total.  Of course, the government taxes employee's pay.  Asusme this tax rate is 20%.  Print the amount withheld for taxes.  Then print the net amount to be paid to the individual."
    ]
   },
@@ -659,7 +717,7 @@
    "source": [
     "Exercise 2: Stock Gain (or loss)\n",
     "\n",
-    "Write a program that allows the user two successive closing prices for a stock.  Compute the the daily percentage gain or loss. If the gain was positive, print the message \"The stock price increased by\" and the percentage increase.\n",
+    "Write a program that allows the user to enter two successive closing prices for a stock.  Compute the the daily percentage gain or loss. If the gain was positive, print the message \"The stock price increased by\" and the percentage increase.\n",
     "If the gain was negative, print the message \"The stock price decreased by and the percentage decrease.\n",
     "Otherwise, print \"No change to the stock price.\""
    ]
@@ -671,7 +729,7 @@
    "source": [
     "Exercise 3: Failed short-circuit evaluation?\n",
     "\n",
-    "In the following code block, why does it appear the short-circuit evaluation is not being followed? and the result is true?"
+    "In the following code block, why does it appear the short-circuit evaluation is not being followed? And the result is true?"
    ]
   },
   {
@@ -682,7 +740,7 @@
    "outputs": [],
    "source": [
     "def test(num, result):\n",
-    "    print ('Expression', num, result)\n",
+    "    print ('evaluating', num, result)\n",
     "    return result\n",
     "\n",
     "print (test(1,\"False\") and test(2,\"True\"))"
