--- a/IntroductionToPython/07-Strings.ipynb
+++ b/IntroductionToPython/07-Strings.ipynb
@@ -5,20 +5,24 @@
    "id": "c4541d9b",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Strings\n",
     "Programmers constantly deal with text - reading it, processing it, and writing it.  Think of the last few times that you used your computer or smartphone.  How much did you deal with text versus numbers?  User names, messages, stock symbols, ...\n",
     "\n",
     "To be an effective programmer, you must have a solid understand of how to use, manipulate, and format strings.\n",
     "\n",
-    "In Python 3, strings are now a sequence of Unicode characters.  Python 2 had used ASCII for the character set instead.  In most situations, this difference isn't very significant as the first 127 characters of Unicode overlap with ASCII. However, if you ever deal with non U.S. characters, Unicode and the UTF-8 encoding to store/transmit those characters becomes critical. By default, UTF-8 is the encoding for Python files. \n",
+    "In Python 3, strings are now a sequence of Unicode characters. Unicode is an international standard to provide consistent encoding and representation of text.  Python 2 had used ASCII for the character set instead. The ASCII standard provided a stanadard representation for 128 characters (only 95 of these were printable - the other 33 were control codes).  In most situations, this difference is insignificant as the first 127 characters of Unicode overlap with ASCII. However, if you ever deal with non U.S. characters, Unicode and the UTF-8 encoding to store and transmit those characters becomes critical. By default, UTF-8 is the encoding for Python files. \n",
     "\n",
     "- [Online Table of Unicode Characters](https://www.rapidtables.com/code/text/unicode-characters.html)\n",
     "- [ASCII](https://www.rapidtables.com/code/text/ascii-table.html)  \n",
     "- [Wikipedia: Unicode](https://en.wikipedia.org/wiki/Unicode)\n",
+    "- [Wikipedia: ASCII](https://en.wikipedia.org/wiki/ASCII)\n",
+    "- [Wikipedia: UTF-8](https://en.wikipedia.org/wiki/UTF-8)\n",
     "\n",
     "The Unicode 14.0 standard, published in September 2021, defined 144,697 different characters.\n",
     "\n",
-    "Sample Unicode characters:"
+    "Sample Unicode characters: (Notice in the next two code blocks that Unicode characters can either be represented by their actual character or by an escape sequence such as \\\\u20ac."
    ]
   },
   {
@@ -39,20 +43,31 @@
    "id": "d3305cb0",
    "metadata": {},
    "source": [
-    "We can also convert unicode characters to and from numbers with the `chr()` and `ord()` built-in functions."
+    "We can also convert Unicode characters to and from numbers with the `ord()` and `chr()` built-in functions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0573a36c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A to #: 65\n",
+      "65 to Unicode: A\n",
+      "Unicode to #: 9731\n",
+      "9731 to Unicode ☃\n"
+     ]
+    }
+   ],
    "source": [
-    "print(chr(65))\n",
-    "print(ord('A'))\n",
-    "print(chr(9731))\n",
-    "print(ord('\\u2603'))"
+    "print('A to #:',ord('A'))\n",
+    "print('65 to Unicode:',chr(65))\n",
+    "print('Unicode to #:',ord('☃'))\n",
+    "print('9731 to Unicode',chr(9731))"
    ]
   },
   {
@@ -71,7 +86,7 @@
    "metadata": {},
    "source": [
     "## Creating Strings\n",
-    "Through these notebooks, you have have already seen three different methods for creating strings.\n",
+    "Through these notebooks, you have already seen three different methods for creating strings.\n",
     "1. Literals\n",
     "2. Converting from other types with `str()`\n",
     "3. `input()`\n",
@@ -184,17 +199,41 @@
    "id": "4eb0e0c7",
    "metadata": {},
    "source": [
-    "Use str() to make a string from another type\n",
+    "Use str() to convert another type into a string.\n",
     "\n",
-    "In the last line of the following block, we return the value of `b` rather than printing it to show the different output."
+    "In the last line of the following block, we return the value of `b` rather than printing it to show the different output. If the last line of a code block is a value, Jupyter considers this a return value and displays it automatically."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "22d01e74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "1842\n",
+      "<class 'NoneType'>\n",
+      "<class 'str'>\n",
+      "None\n",
+      "<class 'str'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(type(1842))\n",
     "x = str(1842)\n",
@@ -270,7 +309,7 @@
    "id": "1e908211",
    "metadata": {},
    "source": [
-    "Note that Python does not automatically insert spaces or other characters when concatenating strings.\n",
+    "Python does not automatically insert spaces or other characters when concatenating strings.\n",
     "\n",
     "## Duplication\n",
     "We can make mulitiple copies of a string with `*` followed by a integer."
@@ -286,7 +325,7 @@
     "print(\"test\" * 5)\n",
     "a = 2\n",
     "s = \"test\"\n",
-    "print(s * 2)"
+    "print(s * a)"
    ]
   },
   {
@@ -392,21 +431,19 @@
    "metadata": {},
    "source": [
     "## Slicing for Substrings\n",
-    "In addition to representing text, strings are the first example of a Python sequence that we'll cover in depth. (Lists and tuples will also be shown). \n",
+    "In addition to representing text, strings are the first example of sequences presented by these notebooks. (Lists and tuples will also be shown). \n",
     "\n",
     "As mentioned above, strings are sequences of Unicode characters.  The methods used below to manipulate strings apply to lists as tuples.\n",
     "\n",
     "We can extract parts of a string (a _substring_) by using a _slice_. A slice is a range of index numbers separated by a colon within square brackets.\n",
     "\n",
     "| Slice | Description\n",
-    "|---|:-----\n",
+    "|---:|:-----\n",
     "|[:]| extracts the entire sequence from start to end\n",
     "|[_start_:] | specifies the sequence from the _start_ to the end\n",
     "|[ : _end_ ]| specifies the sequence from the beginning to the _end_ offset - 1 \n",
     "|[ _start_ : _end_ ] | specifies the sequence from the _start_ to the _end_ offset -1 \n",
-    "|[ _start_ : _end_ : _step_] | specifies the sequence from the _start_ to the _end_ offset -1, skipping characters by _step_\n",
-    "\n",
-    "<sub><sup>Source: Introducing Python: Modern Computing in Simple Packages, Bill Lubanovic</sup></sub>"
+    "|[ _start_ : _end_ : _step_] | specifies the sequence from the _start_ to the _end_ offset -1, skipping characters by _step_\n"
    ]
   },
   {
@@ -414,7 +451,7 @@
    "id": "965d6304",
    "metadata": {},
    "source": [
-    "The following image summarizes how we use indexes and slices - \n",
+    "The following image summarizes how we use indexes and slices:<br> \n",
     "![](images/string-slicing.png)\n",
     "\n",
     "<sub><sup>Source: https://www.faceprep.in/python/string-slicing-in-python/</sup></sub>"
@@ -441,7 +478,7 @@
    "id": "8df3f551",
    "metadata": {},
    "source": [
-    "You should try repeating the above code by using 'abcdefghijklmnopqrstuvwxyz' as the value for opening_line."
+    "Try repeating the above code by using 'abcdefghijklmnopqrstuvwxyz' as the value for opening_line."
    ]
   },
   {
@@ -519,7 +556,7 @@
    "metadata": {},
    "source": [
     "## Splitting Strings\n",
-    "To split apart a string based upon some separator that exists within that string, you can call the method `split()`.  (Notice, we called `split()` a method rather than a function as it belongs to an object of type string.)  As you can see in the below example, `split(' ')` creates a list of the character sequences separated by a space."
+    "To split apart a string into multiple strings based upon some separator that exists within that string, you can call the method `split()`.  (Notice, we called `split()` a method rather than a function as it belongs to an object of type string.)  As you can see in the below example, `split(' ')` creates a list of the character sequences separated by a space."
    ]
   },
   {
@@ -580,8 +617,8 @@
    "id": "ac6e654d",
    "metadata": {},
    "source": [
-    "## Joining String\n",
-    "To join a list of string, we can call the method `join()`.  Rather than belonging to the _list_ class, `join()` belongs to the string(str) class. If you think about this from a design point of view, it makes sense for join() to belong to str as we are manipuliting the strings.  The string that it is called upon will be used as the separator in the resulting string."
+    "## Joining Strings\n",
+    "Use the method `join()` to combine a list of strings into a single string.  Rather than belonging to the `list` class, `join()` belongs to the `str` (string) class. From a design point of view, this makes sense for `join()` to belong to `str` as we use a string as the value between the strings being combined. This process also manipulates strings.  The string that it is called upon will be inserted in between the values of the list."
    ]
   },
   {
@@ -603,7 +640,7 @@
    "metadata": {},
    "source": [
     "## Search and Replace\n",
-    "Python has a couple of different ways to test for the presence of one string within another.\n",
+    "Python contains multiple ways to find if one string is contained within another string.\n",
     "\n",
     "First, you can use the `in` operator which returns `True` or `False`.\n"
    ]
@@ -624,7 +661,7 @@
    "id": "eb6d9c45",
    "metadata": {},
    "source": [
-    "We can also use `find()` or `index()` to get the position where the string starts within another.  These two functions are the same except `find()` returns -1 if the substring is not found, while `index()` raises an exception if the substring is not present. \n",
+    "We can also use `find()` or `index()` to get the position where the string starts within another string.  These two functions are the same except `find()` returns -1 if the substring is not found, while `index()` raises an exception(`ValueError`) if the substring is not present. As Python can use negative numbers to index characters in string, we would need to explicitly check the return value prior to using it.  By Using `index()` that check can be ignored and we would need to rely upon error handling to continue processing.\n",
     "\n",
     "Both methods also allow you to limit the search based upon the starting and, possibly, ending positions."
    ]
@@ -696,7 +733,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# demonsrating that s.replace() returns a new object reference/id\n",
+    "# demonstrating that s.replace() returns a new object reference/id\n",
     "print(id(s))\n",
     "t = s.replace(\",\", \" -\")\n",
     "print(t)\n",
@@ -800,7 +837,7 @@
    "metadata": {},
    "source": [
     "## Changing Case\n",
-    "Python also has a number of string methods to change the case of a string"
+    "Python also has a number of string methods to change the case of a string."
    ]
   },
   {
@@ -818,7 +855,7 @@
    "id": "b7dd0a8e",
    "metadata": {},
    "source": [
-    "Capitalize the first word"
+    "Capitalize the first word:"
    ]
   },
   {
@@ -836,7 +873,7 @@
    "id": "3b1019a3",
    "metadata": {},
    "source": [
-    "Capitalize all of the words"
+    "Capitalize all of the words:"
    ]
   },
   {
@@ -854,7 +891,7 @@
    "id": "29694d79",
    "metadata": {},
    "source": [
-    "Convert all characters to uppercase"
+    "Convert all characters to uppercase:"
    ]
   },
   {
@@ -872,7 +909,7 @@
    "id": "73362ff3",
    "metadata": {},
    "source": [
-    "Convert all characters to lower case"
+    "Convert all characters to lower case:"
    ]
   },
   {
@@ -891,7 +928,7 @@
    "metadata": {},
    "source": [
     "## Aligning Strings\n",
-    "Python also offers a way to align string within a given number of characters (by default a space).  You can specify a second argument that is the fill character to use."
+    "Python also offers a way to align string within a given number of characters (by default a space).  You can specify a fill character in the optional second argument."
    ]
   },
   {
@@ -932,7 +969,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line.rjust(50)   # right justify the string within 50 spaces"
+    "line.rjust(50)    # right justify the string within 50 spaces"
    ]
   },
   {
@@ -941,7 +978,7 @@
    "metadata": {},
    "source": [
     "## String comparisons\n",
-    "Strings use the same comparison operators that are used for numbers."
+    "Strings use the same comparison operators that are used for numbers.  Strings are compared in a dictionary order where uppercase letters have a smaller values than lowercase letters."
    ]
   },
   {
@@ -994,7 +1031,7 @@
     "6. How long is the string in the variable `excited`? Use a function to get the answer\n",
     "7. Using code, what is the first letter of `excited`?  The last letter? \n",
     "8. Get a string (a substring) from `excited` with the last 9 characters.\n",
-    "9. Get a substring from `excited` starting at the first position(0), but skipping every 17th character. What's unusually about this result.\n",
+    "9. Get a substring from `excited` starting at the first position(0), but skipping every 17th character. What's unusual about this result?\n",
     "10. Split the following string by dashes:<br>```a = \"20220502-https://python.org-200-127.0.0.1\"```\n",
     "11. You've just arrived a dystopian society that doesn't believe in vowels.  Write a function to remove any vowels from a string and return a result.  For some reason, they don't mind y's.\n",
     "12. Capitalize each word in the following string:<br>```book_title = 'the hitchhiker\\'s guide to the galaxy'```\n",
@@ -1002,7 +1039,7 @@
     "```\n",
     "line = 'Conference Attendance:14000'\n",
     "```\n",
-    "Use `find()` and string slicing to extract the string.\n",
+    "Use `find()` and string slicing to extract the string.<br>\n",
     "14. Repeat 13, but use `split()`.\n",
     "\n",
     "If you'd like more practice, take a look at some of the functions not covered in the exercises.  Try comparing different strings."
