--- a/IntroductionToPython/08-FormattingStrings.ipynb
+++ b/IntroductionToPython/08-FormattingStrings.ipynb
@@ -5,15 +5,19 @@
    "id": "6c815fb4",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Formatting Strings\n",
-    "So far, we've been using string concatenation and multiple arguments to `print()` to format strings.  In this notebook, we will use [string interpolation](https://en.wikipedia.org/wiki/String_interpolation) to put values into strings with a variety of different formats. \n",
+    "These notebooks have used string concatenation and multiple arguments to `print()` to format strings. This notebook presents using  [string interpolation](https://en.wikipedia.org/wiki/String_interpolation) to put values into strings with a variety of different formats. \n",
     "\n",
     "Python offers three different ways to format strings:\n",
     "- old style (all versions of Pythons) - see reference material if interested, not covered/tested\n",
     "- new style (Python 2.6 +)\n",
     "- f-strings (Python 3.6 +) - see reference material if interested, not covered/tested\n",
     "\n",
-    "In this notebook, we are directly printing the results of the formatting, but we can also assign the results to a variable or use as an expression (e.g., as an argument to a function)."
+    "The f-string style provides an easy convenience to put variables into strings, but at the cost of requiring a literal (hard-coded) value to be used as the format string in the code.  This limitation makes it harder to develop international-based applications.\n",
+    "\n",
+    "This notebook directly prints the results of the formatting, but the formatted string could be assigned to a variable or used as an expression (e.g., as an argument to a function)."
    ]
   },
   {
@@ -71,10 +75,10 @@
    "id": "d9ae1453",
    "metadata": {},
    "source": [
-    "New style formatting uses the following syntax: `{:[fill][alignment][sign][minwidth][.][maxchars]type}`\n",
+    "To format the values placed into the strings, you will need to apply special formatting codes.  These codes follow this syntax: `{:[fill][alignment][sign][minwidth][.][maxchars]type}`\n",
     "    \n",
     "- An initial colon (':').\n",
-    "- An optional fill character (default ' ') to pad the value string if it’s shorter than minwidth.\n",
+    "- An optional fill character (default ' ') to pad the value string if it is shorter than minwidth.\n",
     "- An optional alignment character:\n",
     "  - '<' left (the default)\n",
     "  - '>' right\n",
@@ -176,83 +180,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cddc6849",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "public class Receipt {\n",
-    "public static void main(String[] args) {\n",
-    "// Calculate total owed, assuming 8% tax // and 20% tip\n",
-    "System.out.print(\"Subtotal: \"); \n",
-    "System.out.println(38 + 40 + 30); \n",
-    "System.out.print(\"Tax: \");\n",
-    "System.out.println((38 + 40 + 30) * .08); \n",
-    "System.out.print(\"Tip: \");\n",
-    "System.out.println((38 + 40 + 30) * .2);\n",
-    "System.out.print(\"Total: \"); \n",
-    "System.out.println(38 + 40 + 30 +\n",
-    "(38 + 40 + 30) * .08 + (38 + 40 + 30) * .2);\n",
-    "\n",
-    "} }\n",
-    "\n",
-    "\n",
-    "Variable for subtotal, which is used in calcu- lation of tax, tip, and total\n",
-    "• Variable for tax, which is used in calculation of total\n",
-    "• Variable for tip, which is used in calculation of total\n",
-    "• Variable for total\n",
-    "• All variables are used for output\n",
-    "- function\n",
-    "\n",
-    "\n",
-    "public class Receipt {\n",
-    "public static void main(String[] args) {\n",
-    "// Calculate total owed, assuming 8% tax // and 20% tip\n",
-    "int subtotal = 38 + 40 + 30;\n",
-    "double tax = subtotal * .08;\n",
-    "double tip = subtotal * .2;\n",
-    "double total = subtotal + tax + tip; System.out.println(\"Subtotal: \" + subtotal); System.out.println(\"Tax: \" + tax); System.out.println(\"Tip: \" + tip);\n",
-    "System.out.println(\"Total: \" + total); }\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "511526ad",
    "metadata": {},
    "source": [
     "## Exercises\n",
     "\n",
-    "TODO: Replace this exercise.  \n",
+    "1. Develop your own business format letter with the following specifications:\n",
+    "   - It should be in a function `produce_letter` that takes any arguments needed to produce your letter\n",
+    "   - The function should return a formatted string\n",
+    "   - The string should be a multi-line string. \n",
+    "   - You should perform at least 5 formatting substitutions \n",
     "\n",
-    "1. Using the following form letter, express it as a multiline string.\n",
     "\n",
+    "2. Write a script that defines a float variable and then prints out the number in the format of \\\\$\\*\\*\\*XX.XX where the leading asterisks are used to make the length of the output 10 characters and the precision is two digits.\n",
+    "\n",
+    "\n",
+    "3. Write a function with the following declaration - <code>def print_receipt(subtotal, tax_rate, tip_rate)</code><br>That prints the following:\n",
     "```\n",
-    "Dear {salutation} {name},\n",
-    "\n",
-    "Thank you for your letter. We are sorry that our {product}\n",
-    "{verbed} in your {room}. Please note that it should never\n",
-    "be used in a {room}, especially near any {animals}.\n",
-    "\n",
-    "Send us your receipt and {amount} for shipping and handling.\n",
-    "We will send you another {product} that, in our tests,\n",
-    "is {percent}% less likely to have {verbed}.\n",
-    "\n",
-    "Thank you for your support.\n",
-    "\n",
-    "Sincerely,\n",
-    "{spokesman}\n",
-    "{job_title}\n",
+    "    Subtotal: $     10.00\n",
+    "         Tax: $      0.50\n",
+    "         Tip: $      2.00\n",
+    "               ==========\n",
+    "       Total: $     12.50\n",
     "```\n",
-    "\n",
-    "2. Next, assign variables for all the named placeholders in the string.\n",
-    "3. Format and print the letter using new style strings.\n",
-    "4. Write a script that defines a float variable and then prints out the number in the format of $\\*\\*\\*XX.XX where the leading asterisks are used to make the length of the output 10 characters and the precision is two digits.\n",
-    "\n",
-    "\n",
-    "<sub><sup>1-4 Source: Introducing Python by Bill Lubanovic</sup></sub><br>\n"
+    "with the call: `print_receipt(10.00, .05, .2)`\n",
+    "<br>\n",
+    "You should use formatting for all of the numbers and equal signs."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cec690a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
