--- a/IntroductionToPython/09-Lists.ipynb
+++ b/IntroductionToPython/09-Lists.ipynb
@@ -5,6 +5,8 @@
    "id": "599c2bf6",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Lists\n",
     "\n",
     "In our lives, we regularly use lists - things to buy, stuff to do, etc.  As we use those lists, we add items to them, we remove items from them, and we change items.  \n",
@@ -49,14 +51,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb043611",
+   "id": "0b25b448",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"len(acc_schools):\", len(acc_schools))\n",
+    "print(\"len(acc_schools):\", len(acc_schools))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e7e256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"acc_schools[0]:\",acc_schools[0])\n",
-    "print(\"acc_schools[-1]:\",acc_schools[-1])\n",
-    "print(\"acc_schools[:3]:\",acc_schools[:3])"
+    "print(\"acc_schools[-1]:\",acc_schools[-1])"
    ]
   },
   {
@@ -71,11 +81,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd02872b",
+   "id": "48a822d4",
    "metadata": {},
    "source": [
     "## Adding to a list\n",
-    "The `+` operation (concatenation), creates a new list.  Calling the `append()` method will add item to the end of the existng list."
+    "The `+` operation (concatenation), creates a new list.  To use concatenation, we must use another list"
    ]
   },
   {
@@ -89,6 +99,24 @@
     "new_list = acc_schools + [\"Miami\"]\n",
     "print(new_list)\n",
     "print(id(new_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d898e69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_list = acc_schools + \"Virginia\"       # Raises a TypeError"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd02872b",
+   "metadata": {},
+   "source": [
+    "Calling the `append()` method will add item to the end of the existng list."
    ]
   },
   {
@@ -108,7 +136,7 @@
    "id": "61834e06",
    "metadata": {},
    "source": [
-    "As you can see from that the IDs, new_list is still the same object, but we have added \"Virginia\" to the list by using `append()`.  However, the list contenation using `+` produced a new object.  You should check the object IDs to validate for yourself.\n",
+    "As you can see from that the IDs, new_list is still the same object, but we have added \"Virginia\" to the list by using `append()`.  However, the list contenation using `+` produced a new object.\n",
     "\n",
     "You can also add items to a list with the `extend()` method.  This will treat the argument as a sequence and add iterate through the sequence, adding each item to the list.\n",
     "\n",
@@ -122,7 +150,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TODO - let the user try this on their own..."
+    "# Add \"Pittsburgh\" to new list and print the result\n",
+    "\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33555398",
+   "metadata": {},
+   "source": [
+    "Was the result what you expected?\n",
+    "\n",
+    "If `'P', 'i', 't', 't', 's', 'b', 'u', 'r', 'g', 'h'` was added, remember that strings are sequences, so `extend` iterated through the sequence, adding each element to new_list.\n",
+    "\n",
+    "To use `extend()`, put the term into a list and then make the call."
    ]
   },
   {
@@ -132,8 +174,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_list.extend(\"Pittsburgh\")\n",
+    "# Add \"Pittsburgh\" to new list and print the result\n",
+    "\n",
     "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "204d6b35",
+   "metadata": {},
+   "source": [
+    "What happens if a list was passed to `append()`?"
    ]
   },
   {
@@ -148,13 +199,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab6090cd",
+   "cell_type": "markdown",
+   "id": "1908eec0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(acc_schools)"
+    "The last element should be a list itself now.  Collection objects such as lists can be nested within each other."
    ]
   },
   {
@@ -173,15 +222,9 @@
    "id": "789ceaf1",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5b33b2c",
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "# add a line of code to put Miami at the start of the acc_schools list\n",
+    "\n",
     "print(acc_schools)"
    ]
   },
@@ -199,15 +242,9 @@
    "id": "763955e7",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30a7acd7",
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "# add a line of code to put Pittsburgh at the 6th position\n",
+    "\n",
     "print(acc_schools)"
    ]
   },
@@ -220,7 +257,7 @@
     "\n",
     "* <code><i>list</i>.pop()</code> removes an item from the end of the list, returning that value\n",
     "* <code><i>list</i>.popleft()</code> removes an item from the start of the list, returning that value\n",
-    "* <code><i>list</i>.remove(<i>index</i>)</code> removes an item at the specified index and returns that value"
+    "* <code>del <i>list</i>[<i>index</i>]</code> removes an item at the specified index"
    ]
   },
   {
@@ -230,8 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "last = acc_schools.pop()\n",
-    "first = acc_schools.pop(0)\n",
+    "last = acc_schools.pop()      # Removes the last element\n",
+    "first = acc_schools.pop(0)    # Removes the first element\n",
     "print(first)\n",
     "print(last)\n",
     "print(acc_schools)"
@@ -242,7 +279,7 @@
    "id": "613dd2e2",
    "metadata": {},
    "source": [
-    "Use _list_ `.remove()` to remove a specific value from the list.  Only the first found match is removed. No value is returned.  The method raises a ValueError if there is no such item."
+    "Use <code><i>list</i>.remove(<i>value</i>)</code> to remove a specific value from the list.  Only the first found match is removed. No value is returned.  The method raises a ValueError if there is no such item."
    ]
   },
   {
@@ -259,15 +296,9 @@
    "id": "6e594fdc",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d872a9f",
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "# Add the line remove the value \"UNC\"\n",
+    "\n",
     "print(acc_schools)"
    ]
   },
@@ -315,7 +346,7 @@
    "id": "035f5177",
    "metadata": {},
    "source": [
-    "To test if a value is in a list use the `in` operator"
+    "To test if a value exists in a list use the `in` operator"
    ]
   },
   {
@@ -364,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_schools.index(\"Duke\",1,len(acc_schools))"
+    "acc_schools.index(\"Duke\",1,len(acc_schools))    # starts checking at the second element in the list"
    ]
   },
   {
@@ -374,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_schools.index(\"Duke\",2,5)"
+    "acc_schools.index(\"Duke\",2,5)           # Raises a ValueError - Duke isn't in the specified raange of the list"
    ]
   },
   {
@@ -411,7 +442,11 @@
    "id": "b4b031e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sort acc_schools in descending order by adding the necessary statement\n",
+    "\n",
+    "print(acc_schools)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -446,7 +481,9 @@
    "id": "722a7b93",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# print the id values for acc_schools and sorted schools\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -462,13 +499,18 @@
    "id": "0d0b497b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = sorted(\"hello\")\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9e65f578",
    "metadata": {},
    "source": [
+    "A string is a sequence, so `sorted` processed that sequence of items into sorted order.\n",
+    "\n",
     "What happens you try to sort a list that has a mixture of different types?  Try sorting `mixed_listed` that we defined earlier."
    ]
   },
@@ -478,7 +520,9 @@
    "id": "eeba1c24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add code to sort mixed_list\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -546,7 +590,7 @@
    "metadata": {},
    "source": [
     "## Comparing\n",
-    "Comparing two lists using boolean comparison operators (`<`,`<=`,`==`,`>=`,`>`) uses a lexicographical ordering. Initially, the first item of each of the two lists is compared.  If they differ, then this difference is the outcome. Otherwise, the next items in each list is compared and so forth.  If all items of the two lists are equal, then the lists are equal.  Further, if one list is shorter than the other, then that list is considered the smaller one."
+    "Comparing two lists using boolean comparison operators (`<`,`<=`,`==`,`>=`,`>`) uses a lexicographical ordering. Initially, the first item of each of the two lists is compared.  If they differ, then this difference is the outcome. Otherwise, the next items in each list is compared and so forth.  If all items of the two lists are equal, then the lists are equal.  Then if one list is shorter than the other after comparing elements up to that point, then that list is considered smaller."
    ]
   },
   {
@@ -560,6 +604,7 @@
     "b = [\"one\", \"two\"]\n",
     "c = [\"one\", \"alpha\", \"two\"]\n",
     "d = [\"two\", 3, \"one\"]\n",
+    "e = [\"one\", \"two\", \"three\"]\n",
     "\n",
     "print(\"a <  b:\", a < b)\n",
     "print(\"a >  b:\", a > b)\n",
@@ -567,7 +612,9 @@
     "print(\"c <  a:\", c < a)\n",
     "print(\"c >  a:\", c > a)\n",
     "print(\"a <  d:\", a < d)\n",
-    "print(\"a >  d:\", a > d)\n"
+    "print(\"a >  d:\", a > d)\n",
+    "print(\"b <  c:\", b < c)\n",
+    "print(\"b <  e:\", b < e)\n"
    ]
   },
   {
@@ -585,6 +632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = [\"one\", \"two\"]\n",
     "e = []\n",
     "if a:\n",
     "    print(\"a was not an empty list\")\n",
@@ -657,7 +705,10 @@
    "id": "d3adb0c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add code to join mixed_list or primes\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -694,8 +745,9 @@
     "\n",
     "# print the board\n",
     "print(\"board: \")\n",
-    "for i in range(0, rows):\n",
-    "    print(board[i])\n",
+    "print(\" \",board[0])\n",
+    "print(\" \",board[1])\n",
+    "print(\" \",board[2])\n",
     "    \n",
     "# Accessing parts of the board\n",
     "print(\"Top right corner:\", board[0][2])\n",
@@ -708,7 +760,7 @@
    "id": "e04bb5fc",
    "metadata": {},
    "source": [
-    "While the above example shows a list of list of strings, realize that creating nest data structures can be arbitrarily.  For example, we could respresent a [sudoku](https://en.wikipedia.org/wiki/Sudoku) board as a 9 by 9 matrix.  But then for each cell, we could hold a list of possible numbers that cell could possibly be assigned.\n",
+    "While the above example shows a list of list of strings, realize that creating nested data structures can be arbitrarily.  For example, we could represent a [sudoku](https://en.wikipedia.org/wiki/Sudoku) board as a 9 by 9 matrix.  But then for each cell, we could hold a list of possible numbers that cell could possibly be assigned.\n",
     "\n",
     "![](images/suduko.png)"
    ]
@@ -719,47 +771,20 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "1. Write a short program that reads in a sentence from a user.  Then create a list of words (punctuation can be included as part of the words) by separating the words/characters by whitespace.  Then reverse the list. Finally, join the list back together into a single string with words separated by a colon `:` and print the resulting string.\n"
+    "\n",
+    "For the exercises 1 - 7, use the following list.  Use the Python functions and methods.\n",
+    "`grades  = [87.6, 92.3, 84.5, 90.0, 86.0, 98.6]`\n",
+    "\n",
+    "1. How many elements are in the list?\n",
+    "2. Provide two ways of getting the first element in the list.\n",
+    "3. Provide two ways of getting the last element in the list\n",
+    "4. Remove the first element from the list and return the value.\n",
+    "5. Remove the last element from the list and return the value\n",
+    "6. Concatenate this list to grades:  `[76.4, 99.2, 88.8]`\n",
+    "7. Sort the list\n",
+    "\n",
+    "8. Write a short program that reads in a sentence from a user.  Then create a list of words (punctuation can be included as part of the words) by separating the words/characters by whitespace.  Then reverse the list. Finally, join the list back together into a single string with words separated by a colon `:` and print the resulting string.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d82d95e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eaf3d89c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Answer to #1\n",
-    "sentence = input(\"Enter a sentence: \")\n",
-    "word_list = sentence.split()\n",
-    "word_list.reverse()\n",
-    "result = \":\".join(word_list)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf670e05",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a72b4ae0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
