--- a/IntroductionToPython/10-Tuples.ipynb
+++ b/IntroductionToPython/10-Tuples.ipynb
@@ -5,16 +5,18 @@
    "id": "163d5de3",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Tuples\n",
     "Tuples are sequences of values just like a list - the biggest difference is that tuples are immutable while lists are mutable.  In other words, we can not modify the sequence of values - any change creates a new tuple object.  \n",
     "\n",
-    "Unlike lists, tuples are hashable so we can use them as keys within a dictionary (to be covered) in a later notebook.\n",
+    "Unlike lists, tuples are hashable so we can use them as keys within a dictionary (to be covered in a later notebook).\n",
     "\n",
     "Tuple indexing, slicing, and comparison function identically to lists.\n",
     "\n",
-    "To create a tuple, use a sequence of values separated by a comma.  Although not neccessary, the Python convention is to enclose tuples in parentheses. (Makes identification of tuples easier while reading code).  \n",
+    "To create a tuple, use a sequence of values separated by a comma.  Although not neccessary, the Python convention is to enclose tuples in parentheses. This makes identification of tuples easier while reading code.\n",
     "\n",
-    "Also, as you can see below, both the interpreter and `print()` output parenthesis when displaying lists."
+    "Also, as you can see below, both the interpreter and `print()` output parenthesis when displaying tuples."
    ]
   },
   {
@@ -46,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primes = primes + tuple([24])\n",
+    "primes = primes + tuple([23])\n",
     "print(primes)"
    ]
   },
@@ -110,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "('Death','Destruction','Pestilence') + ('Famine')"
+    "('Death','Destruction','Pestilence') + ('Famine')         #Raises a TypeError"
    ]
   },
   {
@@ -216,11 +218,9 @@
    "id": "11822ac8",
    "metadata": {},
    "source": [
-    "In `a, b = b, a`, both sides of the assignment are tuples.  The right side is a tuple of expressions which is evaluated completedly before any assignments are made to the tuples of variables on the left.  The sizes of both tuples must be the same.\n",
+    "In `a, b = b, a`, both sides of the assignment are tuples.  The right side is a tuple of expressions which is evaluated completely before any assignments are made to the tuples of variables on the left.  The sizes of both tuples must be the same.\n",
     "\n",
-    "Technically, the right side can contain any kind of a sequence.  As an example, we can split an email address into two parts by using the '@' symbol.\n",
-    "\n",
-    "More generally, the right side can be any kind of sequence (string, list, or tuple). For example, to split an email address into a user name and a domain, you could write: >>> addr = monty@python.org >>> uname, domain = addr.split(@)"
+    "Technically, the right side can contain any kind of a sequence.  As an example, we can split an email address into two parts by using the '@' symbol."
    ]
   },
   {
@@ -257,7 +257,7 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "1. Given the following tuple ('AAPL', 157.96, 88_140_000) assign the items to three variables and then print the values\n",
+    "1. Given the following tuple assigned to the variable `data` - ('AAPL', 157.96, 88_140_000). Assign the items to three variables(symbol,price, and volume) and then print the values.\n",
     "\n",
     "2. Test if the stock symbol \"BAC\" is in the data tuple.\n",
     "\n",
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
