--- a/IntroductionToPython/13-Dictionaries.ipynb
+++ b/IntroductionToPython/13-Dictionaries.ipynb
@@ -5,6 +5,8 @@
    "id": "c8a080ef",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Dictionaries\n",
     "Dictionaries are unordered collections of key-value pairs.  Generally, we use strings for keys, but keys can be any immutable type.  (The primary immutable types we have seen so far are strings, ints, floats, and tuples).  Values can be over any type - including other dictionaries and lists.\n",
     "\n",
@@ -849,6 +851,24 @@
     "Lists can continue other lists, but that can also contain dictionaries for each entry.\n",
     "\n",
     "Dictionaries can have lists as values and, also, other dictionaries as those values.  For example, to manage the organizational hierarchy for a company, we could have $n$-nested dictionary, where $n$ is the number of levels in the company's hierarchy. The keys in the nested dictionary are the direct reports of an individual."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a7b6802",
+   "metadata": {},
+   "source": [
+    "\n",
+    "REWORK ALL OF THIS\n",
+    "\n",
+    "Python Dictionary vs List: Which Is Better?\n",
+    "Now that we know more about Python dictionaries, it’s time to compare dictionaries and lists. Which is better? Neither better than the other, but they are helpful in different coding tasks.\n",
+    "\n",
+    "The rules to choose one of these data structures are actually pretty simple:\n",
+    "\n",
+    "When you just need a sequence of elements that you can access with indexing, choose a list.\n",
+    "If you need to quickly access an element mapped to a specific unique key, choose a dictionary.\n",
+    "There is a bit more than that. Dictionaries are much faster if we want to access a specific element because they have a constant runtime, which means that the runtime doesn’t depend on the size of the input object. In contrast, when we want to see if an element exists in a list, the runtime will depend on the size of this list (Python loops through the entire list). Look at the examples:"
    ]
   },
   {
