--- a/IntroductionToPython/14-Sets.ipynb
+++ b/IntroductionToPython/14-Sets.ipynb
@@ -5,6 +5,8 @@
    "id": "c8a9f111",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Sets\n",
     "A set is an unordered collection of objects with no duplicates.\n",
     "\n",
