--- a/IntroductionToPython/15-Files.ipynb
+++ b/IntroductionToPython/15-Files.ipynb
@@ -5,6 +5,8 @@
    "id": "a59b416e",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Files\n",
     "\n",
     "Files are one of the most ubiquitous abstractions for computers.  As users, we constantly interact with files to store our documents and other data.  We organize these files into directories (folders).  Directories can contain subdirectories to provide a hierarchical structure of various contents.  \n",
