--- a/IntroductionToPython/16-JSON.ipynb
+++ b/IntroductionToPython/16-JSON.ipynb
@@ -5,6 +5,8 @@
    "id": "0939a46f",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# JSON\n",
     "JavaScript Object Notation (JSON) has become one of the most widely used data interchange formats on the Internet data.  JSON is also the record format used by some popular database management systems (DBMS) such as [Elasticsearch](https://www.elastic.co/) and [MongoDB](https://www.mongodb.com).  Relational DBMSs such as PostgreSQL and Oracle DB also now offer JSON data type with support to query and index embedded fields.\n",
     "\n",
@@ -56,13 +58,13 @@
     "\n",
     "entry='''\n",
     "{\n",
-    "\t\"name\": \"Bruce Wayne\",\n",
-    "\t\"address\": {\n",
-    "\t\t\"street\": \"101 Wayne Manor Drive\",\n",
-    "\t\t\"city\": \"Gotham\",\n",
-    "\t\t\"state\": \"NJ\",\n",
-    "\t\t\"zipCode\": \"12345-6789\"\n",
-    "\t},\n",
+    "    \"name\": \"Bruce Wayne\",\n",
+    "    \"address\": {\n",
+    "        \"street\": \"101 Wayne Manor Drive\",\n",
+    "        \"city\": \"Gotham\",\n",
+    "        \"state\": \"NJ\",\n",
+    "        \"zipCode\": \"12345-6789\"\n",
+    "    },\n",
     "\t\"occupation\": \"CEO\",\n",
     "\t\"alias\": \"Batman\",\n",
     "\t\"phone\": [\"212-234-5544\", \"212-456-8734\"]\n",
@@ -148,16 +150,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0979ea1b",
+   "cell_type": "markdown",
+   "id": "43e8d9d5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Case Study: Stock Quotes, REST, and JSON\n",
+    "Yahoo Finance has long published a series of APIs that allow developers and other systems to access stock market data. At one point, Yahoo sold subscription access to these APIs.  However, they have since shutdown their service, but their APIs are still directly accessible.  While a service still appears to be available from Yahoo, yahoofinanceapi.com, the services is provided by a Russian company.  The DNS regristration records demonstrate this. You can run `whois yahoofinanceapi.com` from a command-line to see the details.  \n",
     "\n",
+    "While the following is not legal advice, currently in the United States it is permissible to access publicly available website to scrape data provided no authorization is required. https://en.wikipedia.org/wiki/HiQ_Labs_v._LinkedIn\n",
     "\n",
-    "\n"
+    "The following code block demonstrates accessing the Yahoo Finance API to retrieve a stock quote. The complete JSON response is printed after displaying the price and market time in [ISO-8601 format](https://en.wikipedia.org/wiki/ISO_8601)."
    ]
   },
   {
@@ -168,52 +170,42 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import datetime\n",
     "from urllib.request import urlopen\n",
     "    \n",
-    "stockSymbol = \"GOOGL\"\n",
+    "stockSymbol = \"BAC\"\n",
     "url = \"https://query1.finance.yahoo.com/v7/finance/quote?symbols={}\".format(stockSymbol)\n",
     "try:\n",
     "    response = urlopen(url)\n",
     "    contents = response.read()\n",
     "    data = json.loads(contents)\n",
+    "    \n",
+    "    dt = datetime.datetime.utcfromtimestamp(data[\"quoteResponse\"][\"result\"][0][\"regularMarketTime\"])\n",
     "\n",
-    "    print(\"{:s} current market price: ${:0.2f}\".format(data[\"quoteResponse\"][\"result\"][0][\"symbol\"],\n",
-    "                                                       data[\"quoteResponse\"][\"result\"][0][\"regularMarketPrice\"]))\n",
+    "    print(\"{:s} latest market price: ${:0.2f} at {:s}\".format(data[\"quoteResponse\"][\"result\"][0][\"symbol\"],\n",
+    "                                                       data[\"quoteResponse\"][\"result\"][0][\"regularMarketPrice\"],\n",
+    "                                                       dt.isoformat()))\n",
+    "    \n",
+    "    print(json.dumps(data, sort_keys=True, indent=4))\n",
     "except BaseException as err:\n",
     "    print(\"Unexpected {}, {}\".format(err,type(err)))\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91ece8fa",
+   "cell_type": "markdown",
+   "id": "e5971188",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "TODO\n",
-    "\n",
-    "https://github.com/ranaroussi/yfinance\n",
+    "Several developers have also written APIs to access stock market data from Yahoo.  These APIs provide a more abstract view of the data:\n",
+    "- https://github.com/ranaroussi/yfinance\n",
+    "- https://github.com/dpguthrie/yahooquery\n",
     "    \n",
-    "\n",
-    "https://www.yahoofinanceapi.com/\n",
-    "In looking at the whois data for this, the site is registered through a russian DNS regsistrar.\n",
-    "\n",
-    "yfapi.net - aws "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f378bf53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TODO \n",
-    "\n",
-    "Use recursion when going through a nested dictionary...  print the type, depth, key. and value name'\n",
-    "\n",
-    "Exercise flatten JSON structure..."
+    "Several alternative API providers exist for market data as well: \n",
+    "- https://www.alphavantage.co/\n",
+    "- https://polygon.io/\n",
+    "- https://finnhub.io/pricing\n",
+    "- and more ..."
    ]
   },
   {
@@ -221,13 +213,53 @@
    "id": "1a636b7d",
    "metadata": {},
    "source": [
-    "## Exercises\n"
+    "## Exercise\n",
+    "1. Flatten the contents of the follow list into a file.  The first row of the file should be the column headers separated by tabs.  Each row is a record. Fields should be separated by tabs. You can assume each record has the same format.  The order of columns does not matter\n",
+    "<pre>\n",
+    "entries='''\n",
+    "[\n",
+    "{\n",
+    "    \"name\": \"Bruce Wayne\",\n",
+    "    \"address\": {\n",
+    "        \"street\": \"101 Wayne Manor Drive\",\n",
+    "        \"city\": \"Gotham\",\n",
+    "        \"state\": \"NJ\",\n",
+    "        \"zipCode\": \"12345-6789\"\n",
+    "    },\n",
+    "\t\"occupation\": \"CEO\",\n",
+    "\t\"alias\": \"Batman\",\n",
+    "\t\"phone\": \"212-234-5544\"\n",
+    "},\n",
+    "{\n",
+    "    \"name\": \"Clark Kent\",\n",
+    "    \"address\": {\n",
+    "        \"street\": \"154 5th Avenue\",\n",
+    "        \"city\": \"New York City\",\n",
+    "        \"state\": \"NY\",\n",
+    "        \"zipCode\": \"1221-6789\"\n",
+    "    },\n",
+    "\t\"occupation\": \"Reporter\",\n",
+    "\t\"alias\": \"Superman\",\n",
+    "\t\"phone\": \"212-359-4444\"\n",
+    "}\n",
+    "]\n",
+    "'''\n",
+    "</pre>\n",
+    "Expected output:\n",
+    "<pre>\n",
+    "name\\taddress.street\\taddress.city\\taddress.state\\taddress.zipCode\\toccupation\\talias\\tphone\n",
+    "Bruce Wayne\\t101 Wayne Manor Drive\\tGotham\\tNJ\\t12345-6789\\tCEO\\tBatman\\t212-234-5544\n",
+    "Clark Kent\\t154 5th Avenue\\tNew York City\\tNY\\t1221-6789\\tReporter\\tSuperman\\t212-359-4444\n",
+    "</pre>\n",
+    "Hints:\n",
+    "You need to recursively traverse the JSON structure (the dictionary with Python) to figure out the columns.\n",
+    "Then using those columns, recursive access data elements."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb506245",
+   "id": "f7fc3833",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -249,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
