--- a/IntroductionToPython/15.5-Recursion.ipynb
+++ b/IntroductionToPython/15.5-Recursion.ipynb
@@ -5,6 +5,8 @@
    "id": "96dd2ee0",
    "metadata": {},
    "source": [
+    "<div class=\"pagebreak\"></div>\n",
+    "\n",
     "# Recursion\n",
     "Recursion is a special type of problem in which the solution is often defined in terms of the solution itself. Generally speaking, it continually solves smaller and smaller instances of itself, until it reaches a base case.\n",
     "\n",
@@ -404,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
